[package]
name = "rust-wasm-vanilla"
version = "0.1.0"
authors = ["ArakiTakaki <araki_takaki@yahoo.co.jp>"]

# crate-type = ["cdylib"]
[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3.25"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[dependencies]
wasm-bindgen = "0.2.48"
# web-sys = "0.3.25"
